solved select not beeing aligned with other inputs

--- a/src/style.css
+++ b/src/style.css
@@ -242,9 +242,14 @@ a{
 	border:none;
     width: 14em;
     border-radius: 0.4em;
+    padding-right: 0em;
     padding-top: 0.3em;
     padding-bottom: 0.3em;
     padding-left: 0.7em;
+}
+
+.d-signup-info select{
+    width: 14.7em;
 }
 
 #button-signup-register{
